<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Finance</string>
    <string name="menu_name">User Name</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Personal Finance</string>
    <string name="Left">Left</string>
    <string name="Earned">Earned</string>
    <string name="Spent">Spent</string>
    <string name="Add_transaction">Add transaction</string>
    <string name="Leader_Board">Leader Board</string>
    <string name="Map">Map</string>  
      
    <string name="History">History</string>
    
    <string name="Category">Select the category:</string>
    <string name="Cost">Cost:</string>
    <string name="Profit">Profit:</string>
    <string name="Coste">Cost</string>
    <string name="Profite">Profit</string>
    <string name="Geolocation">Geolocation:</string>
    <string name="Description">Description:</string>
    <string name="Date">Date:</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="General">General</string>
    <string name="Clothes">Clothes</string>
    <string name="Food">Food</string>
    <string name="Bar">Bar</string>
    <string name="Gift">Gift</string>
    <string name="Hobbies">Hobbies</string>
    <string name="HouseHold">HouseHold</string>
    <string name="Car">Car</string>
    <string name="Personal">Personal</string>
    <string name="Shopping">Shopping</string>
    <string name="Travel">Travel</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_transaction_list">TransactionListActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_introducir_coste">Introducir_coste</string>
    <string name="title_activity_bar_trial">Chart</string>
    <string name="user_expenses">User expenses</string>
    <string name="jan">Jan</string>
    <string name="apr">Apr</string>
    <string name="aug">Aug</string>
    <string name="dec">Dec</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>