<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/leftMoneyTV" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
    		android:layout_width="match_parent"
    		android:layout_height="match_parent"
            android:background="#303030" >
    
	<TextView
	    android:id="@+id/leftMoneyTV"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="22dp"
	    android:text="€2.222.22"
	    android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#3CBEF1" />

    <TextView
        android:id="@+id/leftTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leftMoneyTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/Left"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#3CBEF1" />

    <TextView
        android:id="@+id/spentMoneyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftMoneyTV"
        android:layout_alignBottom="@+id/leftMoneyTV"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:text="€222.22"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ED687E" />

    <TextView
        android:id="@+id/earnedMoneyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftMoneyTV"
        android:layout_alignBottom="@+id/leftMoneyTV"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:text="€2.222.22"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7EC878" />

    <TextView
        android:id="@+id/earnedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftTV"
        android:layout_alignBottom="@+id/leftTV"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:text="@string/Earned"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#7EC878" />

    <TextView
        android:id="@+id/spentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/leftTV"
        android:layout_alignBottom="@+id/leftTV"
        android:layout_alignLeft="@+id/spentMoneyTV"
        android:text="@string/Spent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ED687E" />

    <ProgressBar
        android:id="@+id/moneyProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leftTV"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp" />

    <ListView
        android:id="@+id/lastTransactionsLV"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/moneyProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"
        android:divider="#303030"
        android:dividerHeight="0px">
    </ListView>
    
    <Button
        android:id="@+id/addTransactionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastTransactionsLV"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/Add_transaction" />
    
    <Button
        android:id="@+id/AllTransactionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addTransactionButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/History" />
    
    <ScrollView
        android:id="@+id/leaderAndMapScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AllTransactionButton"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:orientation="horizontal">
            
        <Button
        android:id="@+id/leaderBoardButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/Leader_Board" />
        
        <Button
        android:id="@+id/mapButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/Map" />
            
        </LinearLayout>
    </ScrollView>
    
    
    </RelativeLayout>
    </ScrollView>

    

</RelativeLayout>
